# indielib-crossplatform

IndieLib/: CMakeLists.txt
IndieLib/cmake/Modules/: FindFreeImage.cmake  FindGLEW.cmake  FindTmxParser.cmake  FindUnitTest++.cmake
IndieLib/common/dependencies/FreeImage/: CMakeLists.txt
IndieLib/common/dependencies/SDL-2.0/.hg/: dirstate
IndieLib/common/dependencies/SDL-2.0/.hg/cache/: branchheads  tags
IndieLib/common/dependencies/SDL-2.0/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
IndieLib/common/dependencies/SDL-2.0/.hg/store/data/: _android.mk.i  _c_make_lists.txt.i  _r_e_a_d_m_e-android.txt.i  _r_e_a_d_m_e-macosx.txt.i  _r_e_a_d_m_e-raspberrypi.txt.i  _r_e_a_d_m_e.txt.i  configure.i  configure.in.i  ~2ehgignore.i  ~2ehgtags.i
IndieLib/common/dependencies/SDL-2.0/.hg/store/data/_visual_c/: _s_d_l___v_s2010.sln.i
IndieLib/common/dependencies/SDL-2.0/.hg/store/data/_visual_c/_s_d_l/: _s_d_l___v_s2008.vcproj.i  _s_d_l___v_s2010.vcxproj.i  _s_d_l___v_s2012.vcxproj.i
IndieLib/common/dependencies/SDL-2.0/.hg/store/data/_xcode-i_o_s/_s_d_l/_s_d_l.xcodeproj/: project.pbxproj.i
IndieLib/common/dependencies/SDL-2.0/.hg/store/data/_xcode/_s_d_l/: _info-_framework.plist.i
IndieLib/common/dependencies/SDL-2.0/.hg/store/data/_xcode/_s_d_l/_s_d_l.xcodeproj/: project.pbxproj.i
IndieLib/common/dependencies/SDL-2.0/.hg/store/data/_xcode/_s_d_l_test/_s_d_l_test.xcodeproj/: project.pbxproj.i
IndieLib/common/dependencies/SDL-2.0/.hg/store/data/build-scripts/: androidbuild.sh.i  raspberrypi-buildbot.sh.i
IndieLib/common/dependencies/SDL-2.0/.hg/store/data/cmake/: sdlchecks.cmake.i
IndieLib/common/dependencies/SDL-2.0/.hg/store/data/include/: _s_d_l.h.i  _s_d_l__assert.h.i  _s_d_l__atomic.h.i  _s_d_l__audio.h.i  _s_d_l__bits.h.i  _s_d_l__config.h.cmake.i  _s_d_l__config.h.in.i  _s_d_l__config__android.h.i  _s_d_l__config__iphoneos.h.i  _s_d_l__config__macosx.h.i  _s_d_l__config__minimal.h.i  _s_d_l__config__pandora.h.i  _s_d_l__config__psp.h.i  _s_d_l__config__windows.h.i  _s_d_l__cpuinfo.h.i  _s_d_l__endian.h.i  _s_d_l__error.h.i  _s_d_l__events.h.i  _s_d_l__filesystem.h.i  _s_d_l__haptic.h.i  _s_d_l__hints.h.i  _s_d_l__joystick.h.i  _s_d_l__main.h.i  _s_d_l__mutex.h.i  _s_d_l__pixels.h.i  _s_d_l__platform.h.i  _s_d_l__rect.h.i  _s_d_l__render.h.i  _s_d_l__rwops.h.i  _s_d_l__scancode.h.i  _s_d_l__stdinc.h.i  _s_d_l__surface.h.i  _s_d_l__system.h.i  _s_d_l__test__common.h.i  _s_d_l__test__harness.h.i  _s_d_l__thread.h.i  _s_d_l__version.h.i  _s_d_l__video.h.i  begin__code.h.i
IndieLib/common/dependencies/SDL-2.0/.hg/store/data/src/: _s_d_l.c.i  _s_d_l__assert.c.i  _s_d_l__assert__c.h.i  _s_d_l__hints.c.i  _s_d_l__log.c.i
IndieLib/common/dependencies/SDL-2.0/.hg/store/data/src/atomic/: _s_d_l__spinlock.c.i
IndieLib/common/dependencies/SDL-2.0/.hg/store/data/src/audio/: _s_d_l__audio.c.i  _s_d_l__wave.c.i
IndieLib/common/dependencies/SDL-2.0/.hg/store/data/src/audio/alsa/: _s_d_l__alsa__audio.c.i
IndieLib/common/dependencies/SDL-2.0/.hg/store/data/src/audio/android/: _s_d_l__androidaudio.c.i  _s_d_l__androidaudio.h.i
IndieLib/common/dependencies/SDL-2.0/.hg/store/data/src/cpuinfo/: _s_d_l__cpuinfo.c.i
IndieLib/common/dependencies/SDL-2.0/.hg/store/data/src/events/: _s_d_l__events.c.i  _s_d_l__gesture.c.i  _s_d_l__keyboard.c.i  _s_d_l__keyboard__c.h.i  _s_d_l__mouse.c.i  _s_d_l__touch.c.i  _s_d_l__windowevents.c.i  scancodes__darwin.h.i  scancodes__windows.h.i  scancodes__xfree86.h.i
IndieLib/common/dependencies/SDL-2.0/.hg/store/data/src/file/: _s_d_l__rwops.c.i
IndieLib/common/dependencies/SDL-2.0/.hg/store/data/src/haptic/: _s_d_l__haptic.c.i
IndieLib/common/dependencies/SDL-2.0/.hg/store/data/src/joystick/: _s_d_l__gamecontroller.c.i  _s_d_l__joystick.c.i  _s_d_l__sysjoystick.h.i
IndieLib/common/dependencies/SDL-2.0/.hg/store/data/src/render/: _s_d_l__render.c.i  _s_d_l__sysrender.h.i  _s_d_l__yuv__sw.c.i  _s_d_l__yuv__sw__c.h.i
IndieLib/common/dependencies/SDL-2.0/.hg/store/data/src/stdlib/: _s_d_l__getenv.c.i  _s_d_l__iconv.c.i  _s_d_l__string.c.i
IndieLib/common/dependencies/SDL-2.0/.hg/store/data/src/test/: _s_d_l__test__assert.c.i  _s_d_l__test__common.c.i  _s_d_l__test__font.c.i  _s_d_l__test__fuzzer.c.i  _s_d_l__test__harness.c.i  _s_d_l__test__log.c.i
IndieLib/common/dependencies/SDL-2.0/.hg/store/data/src/thread/: _s_d_l__systhread.h.i  _s_d_l__thread.c.i  _s_d_l__thread__c.h.i
IndieLib/common/dependencies/SDL-2.0/.hg/store/data/src/timer/: _s_d_l__timer.c.i
IndieLib/common/dependencies/SDL-2.0/.hg/store/data/src/video/: _s_d_l___r_l_eaccel.c.i  _s_d_l__blit.c.i  _s_d_l__blit.h.i  _s_d_l__blit___a.c.i  _s_d_l__bmp.c.i  _s_d_l__clipboard.c.i  _s_d_l__egl.c.i  _s_d_l__egl.h.i  _s_d_l__fillrect.c.i  _s_d_l__pixels.c.i  _s_d_l__shape.c.i  _s_d_l__stretch.c.i  _s_d_l__surface.c.i  _s_d_l__sysvideo.h.i  _s_d_l__video.c.i
IndieLib/common/dependencies/SDL-2.0/.hg/store/data/test/: _makefile.in.i  checkkeys.c.i  configure.i  configure.in.i  loopwave.c.i  testatomic.c.i  testaudioinfo.c.i  testautomation.c.i  testautomation__pixels.c.i  testautomation__platform.c.i  testautomation__sdltest.c.i  testautomation__suites.h.i  testautomation__surface.c.i  testdraw2.c.i  testdrawchessboard.c.i  testdropfile.c.i  testerror.c.i  testfile.c.i  testfilesystem.c.i  testgamecontroller.c.i  testgesture.c.i  testgl2.c.i  testgles.c.i  testhaptic.c.i  testiconv.c.i  testime.c.i  testintersections.c.i  testjoystick.c.i  testkeys.c.i  testloadso.c.i  testlock.c.i  testmessage.c.i  testmultiaudio.c.i  testnative.c.i  testnativew32.c.i  testnativex11.c.i  testoverlay2.c.i  testplatform.c.i  testpower.c.i  testrelative.c.i  (+16 more)
IndieLib/common/dependencies/SpriterParser/: CMakeLists.txt
IndieLib/common/dependencies/TmxParser/: CMakeLists.txt
IndieLib/common/dependencies/glew-1.9.0/: CMakeLists.txt
IndieLib/common/dependencies/tinyxml/: CMakeLists.txt
IndieLib/common/dependencies/unittest++/: CMakeLists.txt
IndieLib/common/include/: IND_Math.h  IND_SpriterEntity.h
IndieLib/common/src/: IND_LightManager.cpp
(+133 files in other folders)
